# Fancier

./: LICENSE-3RD-PARTY.txt  LICENSE.txt  README.md
java/: .clang-format  .gitignore  local.properties  settings.gradle
java/buildSrc/: build.gradle
java/buildSrc/src/main/groovy/: fancier.library-conventions.gradle
java/project/android/: build.gradle
java/project/android/src/main/java/es/ull/pcg/hpc/fancier/image/: ARGBImage.java  RGBAImage.java
java/project/core/src/main/java/es/ull/pcg/hpc/fancier/: Fancier.java  Math.java  NativeException.java  OpenCLException.java  Parallel.java  Translatable.java
java/project/core/src/main/java/es/ull/pcg/hpc/fancier/array/: ByteArray.java  DoubleArray.java  FloatArray.java  IntArray.java  LongArray.java  ShortArray.java
java/project/core/src/main/java/es/ull/pcg/hpc/fancier/image/: ARGBColor.java  RGBAColor.java
java/project/core/src/main/java/es/ull/pcg/hpc/fancier/vector/: Byte2.java  Byte3.java  Byte4.java  Byte8.java  Double2.java  Double3.java  Double4.java  Double8.java  Float2.java  Float3.java  Float4.java  Float8.java  Int2.java  Int3.java  Int4.java  Int8.java  Long2.java  Long3.java  Long4.java  Long8.java  Short2.java  Short3.java  Short4.java  Short8.java
java/project/core/src/main/java/es/ull/pcg/hpc/fancier/vector/array/: Byte2Array.java  Byte3Array.java  Byte4Array.java  Byte8Array.java  Double2Array.java  Double3Array.java  Double4Array.java  Double8Array.java  Float2Array.java  Float3Array.java  Float4Array.java  Float8Array.java  Int2Array.java  Int3Array.java  Int4Array.java  Int8Array.java  Long2Array.java  Long3Array.java  Long4Array.java  Long8Array.java  Short2Array.java  Short3Array.java  Short4Array.java  Short8Array.java
java/project/jre/: build.gradle
java/project/jre/src/main/java/es/ull/pcg/hpc/fancier/image/: ARGBImage.java  RGBAImage.java
native/: .clang-format  Android.mk  AndroidPlugin.mk  Application.mk  Doxyfile  Makefile
native/core/include/: fancier.h
native/core/include/CL/: cl.h  cl_d3d10.h  cl_ext.h  cl_gl.h  cl_gl_ext.h  cl_platform.h  opencl.h
native/core/include/fancier/: array.h  color.h  exception.h  image.h  java.h  log.h  math.h  ocl.h  platform.h  utils.h  vector.h  vector_array.h
native/core/include/fancier/internal/: snippets.inc
native/core/src/: array.c  color.c  exception.c  fancier.cpp  image.c  java.c  log.c  math.c  ocl.c  utils.c  utils.cpp  vector.c  vector_array.c
native/core/src/CL/: cl.c  cl_egl.c  cl_ext.c  cl_ext_intel.c  cl_gl.c
native/plugin/tiling/include/fancier/plugin/: tiling.h
native/plugin/tiling/include/fancier/plugin/tiling/: class_tiling_data.h  data_entry.h  data_entry_set.h  unique_ptr_content_comp.h
native/plugin/tiling/src/: data_entry.cpp  tiling.cpp
native/test/: Makefile  tiling_test.cpp  utils_test.c  utils_test.cpp
native/test/include/: minunit.h
opencl/: fc_image.cl  math_lib.cl
test/: copy_libs.sh
test/android/: .gitignore  .project  build.gradle  settings.gradle
test/android/app/: .gitignore  .project  CMakeLists.txt  build.gradle  release-key.jks
test/android/app/release/: FancierTest_XU3_2022_05_03_13_46_19.xml  output-metadata.json
test/android/app/src/androidTest/java/es/ull/pcg/hpc/fancier/androidtest/: ExampleInstrumentedTest.java
test/android/app/src/main/: AndroidManifest.xml
test/android/app/src/main/assets/: filters.cl  math_lib.cl
test/android/app/src/main/java/es/ull/pcg/hpc/fancier/androidtest/activity/: MainActivity.java
test/android/app/src/main/java/es/ull/pcg/hpc/fancier/androidtest/benchmark/: AndroidBarProgressListener.java  AndroidLogOutputPrinter.java  AndroidUtils.java  BenchmarkTask.java  DeviceDescriptor.java  DeviceUtils.java  Devices.java  OSUtils.java  ReliableAndroidRunner.java  RootFileContentsMeter.java  ShellUtils.java
test/android/app/src/main/java/es/ull/pcg/hpc/fancier/androidtest/controller/: RunTestButtonController.java
test/android/app/src/main/java/es/ull/pcg/hpc/fancier/androidtest/model/: FancierTestRunner.java  FilterInfo.java  ImageFilter.java  ImageFilterBuilder.java  ImageFilters.java  JavaImageFilter.java  NativeImageFilter.java  TestRunner.java  TestTask.java
test/android/app/src/main/java/es/ull/pcg/hpc/fancier/androidtest/test/: ArrayTest.java  DummyTest.java  FilterTest.java  InitTest.java  MathTest.java  ReleaseTest.java  RuntimeTest.java  VectorArrayTest.java  VectorTest.java
test/android/app/src/main/java/es/ull/pcg/hpc/fancier/androidtest/view/: ConsoleView.java  TextFormatter.java
test/android/app/src/main/jni/src/: array_test.c  math_test.c  vector_array_test.c  vector_test.c
test/android/app/src/main/jni/src/filter/: native_filter.c
test/android/app/src/main/jni/src/rancid/: rancid.c
test/android/app/src/main/jni/src/test/: array_test.c  math_test.c  quick_test.c  vector_array_test.c  vector_test.c
test/android/app/src/main/res/layout/: activity_main.xml
test/android/app/src/main/res/values/: colors.xml  strings.xml  values.xml
test/android/app/src/test/java/es/ull/pcg/hpc/fancier/androidtest/: ExampleUnitTest.java
test/android/gradle/wrapper/: gradle-wrapper.properties
test/linux/: .gitignore
test/linux/app/: run.sh
test/linux/java/: build.gradle  run.sh
test/linux/java/src/main/java/es/ull/pcg/hpc/fancier/linuxtest/: Main.java
test/linux/java/src/main/resources/: ImageTitles  TestsNames
test/linux/java/src/main/resources/BenchmarkResults/: FancierTest_IRIS_2021_11_24_15_30_14.xml  FancierTest_IRIS_2021_11_30_15_00_41.xml  FancierTest_IRIS_2021_11_30_15_02_00.xml  FancierTest_IRIS_2021_11_30_15_12_49.xml  FancierTest_IRIS_2021_11_30_15_24_19.xml  FancierTest_IRIS_2021_12_01_13_39_54.xml
test/linux/java/src/test/java/: MainTest.java
test/linux/jni/: .gitignore  CMakeLists.txt
test/linux/jni/src/: hello.c  hello.cpp
test/linux/jni/src/filter/: native_filter.c
test/linux/jni/src/rancid/: rancid.c
test/linux/jni/src/test/: array_test.c  math_test.c  quick_test.c  vector_array_test.c  vector_test.c
test/linux/opencl/: fc_math.cl  filters.cl  math_lib.cl
(+25 files in other folders)
